--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ twitter_user: haacked
 twitter_tweet_button: true
 
 # Disqus Comments
-disqus_short_name: haacked
+disqus_short_name: skirdinli
 disqus_show_comment_count: true
 
 # Google Analytics
