--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 #
 author: Semih Kırdinli
 description: Bir Bilgisever Mühendis ...ve onun düşünceleri
-url: https://semihkirdinli.wordpress.com
+url: https://semihkirdinli.github.io
 title: Bir Bilgisever Mühendis
 subtitle: ...ve onun düşünceleri
 gravatar_url: https://tr.gravatar.com/userimage/4966509/ad4620408efa538c105cd45c70a2a131.jpg?size=200
