--- a/_config.yml
+++ b/_config.yml
@@ -1,24 +1,24 @@
 #
 # Blog Settings
 #
-author: Semih Kırdinli
-description: Bir Bilgisever Mühendis ...ve onun düşünceleri
-url: https://semihkirdinli.github.io
-title: Bir Bilgisever Mühendis
-subtitle: ...ve onun düşünceleri
-gravatar_url: https://tr.gravatar.com/userimage/4966509/ad4620408efa538c105cd45c70a2a131.jpg?size=200
+author: Phil Haack
+description: You've been Haacked and you like it
+url: https://semihkirdinli.wordpress.com/
+title: You've Been Haacked
+subtitle: ...and you like it
+gravatar_url: https://2.gravatar.com/avatar/cdf546b601bf29a7eb4ca777544d11cd
 subscribe_rss: https://semihkirdinli.wordpress.com/feed/
 
 # Github repositories
-github_user: semihkirdinli
-github_repo_url: https://github.com/semihkirdinli/semihkirdinli.github.io/
+github_user: haacked
+github_repo_url: https://github.com/Haacked/haacked.com/
 
 # Twitter
-twitter_user: skirdinli
+twitter_user: haacked
 twitter_tweet_button: true
 
 # Disqus Comments
-disqus_short_name: skirdinli
+disqus_short_name: haacked
 disqus_show_comment_count: true
 
 # Google Analytics
