--- a/_config.yml
+++ b/_config.yml
@@ -2,23 +2,23 @@
 # Blog Settings
 #
 author: Semih Kırdinli
-description: ...ve düşünceleri
-url: https://semihkirdinli.wordpress.com/
-title: Semih Kırdinli
+description: Semih Kırdinli © ...ve düşünceleri
+url: https://semihkirdinli.wordpress.com
+title: Semih Kırdinli ⓒⓔ 
 subtitle: ...ve düşünceleri
-gravatar_url: https://2.gravatar.com/avatar/cdf546b601bf29a7eb4ca777544d11cd
+gravatar_url: https://tr.gravatar.com/userimage/4966509/ad4620408efa538c105cd45c70a2a131.jpg?size=200
 subscribe_rss: https://semihkirdinli.wordpress.com/feed/
 
 # Github repositories
-github_user: haacked
-github_repo_url: https://github.com/Haacked/haacked.com/
+github_user: semihkirdinli
+github_repo_url: https://github.com/semihkirdinli/semihkirdinli.github.io/
 
 # Twitter
-twitter_user: haacked
+twitter_user: skirdinli
 twitter_tweet_button: true
 
 # Disqus Comments
-disqus_short_name: haacked
+disqus_short_name: skirdinli
 disqus_show_comment_count: true
 
 # Google Analytics
