--- a/_config.yml
+++ b/_config.yml
@@ -42,4 +42,4 @@ category_dir: categories
 gems:
   - jekyll-redirect-from
   - jekyll-sitemap
-  - jekyll-paginate  - jekyll-paginate
+  - jekyll-paginate
